# thulr

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
Counter/: CMakeLists.txt  Counter_test.cpp
Exceptions/: Exceptions.hpp
Keyboard/: Keyboard.cpp  Keyboard_test.cpp
NCounter/: CMakeLists.txt  NCounter_test.cpp
Quantizer/: Quantizer.cpp  Quantizer_test.cpp
ShiftRegister/: CMakeLists.txt  ShiftRegister.cpp  ShiftRegister.hpp
scripts/: CreateLibrary.sh
scripts/cmake/: AddTests.cmake  LibraryTemplate.cmake
source/BinaryCounter/: BinaryCounter.cpp  BinaryCounter.hpp  BinaryCounter_test.cpp  CMakeLists.txt
source/Chords/: CMakeLists.txt  Chords.cpp  Chords.hpp  Chords_test.cpp  Key.hpp
source/Counter/: Counter.cpp  Counter.hpp  Counter_test.cpp
source/Exceptions/: CMakeLists.txt  Exceptions.cpp  Exceptions.hpp
source/Keyboard/: CMakeLists.txt  Keyboard.cpp  Keyboard.hpp  Keyboard_test.cpp
source/Keyboard/ActiveNote/: ActiveNote.hpp
source/Misc/: NoteValues.hpp
source/NCounter/: CMakeLists.txt  NCounter.cpp  NCounter.hpp  NCounter_test.cpp
source/Quantizer/: CMakeLists.txt  Enums.hpp  Quantizer.cpp  Quantizer.hpp  QuantizerMisc.cpp  QuantizerStrategies.cpp  Quantizer_test.cpp  README.md
source/RandomOctave/: CMakeLists.txt  README.md  RandomOctave.cpp  RandomOctave.hpp  RandomOctave_test.cpp
source/RandomOctave/ActiveNote/: ActiveNote.hpp
source/RandomOctave/Note/: ActiveNote.hpp  Key.hpp  Keyboard.hpp  Note.hpp  Range.hpp
source/ShiftRegister/: CMakeLists.txt  ShiftRegister.cpp  ShiftRegister.hpp  ShiftRegister_test.cpp
source/Utils/: CMakeLists.txt  Constants.hpp  MIDI.hpp  MIDI_test.cpp  NoteValues.hpp  TestHelpers.hpp
